--- a/.github/workflows/_lint-terraform.yml
+++ b/.github/workflows/_lint-terraform.yml
@@ -11,9 +11,14 @@ on:
         description: 'Terraform workspace'
         required: true
         type: string
-
+      skip:
+        description: 'Whether to skip the job'
+        required: false
+        type: string
+        default: 'false'
 jobs:
-  build-web:
+  lint-terraform:
+    if: inputs.skip != 'true'
     runs-on: ubuntu-latest
     strategy:
       matrix:
