--- a/.github/workflows/_seed-database.yml
+++ b/.github/workflows/_seed-database.yml
@@ -1,8 +1,14 @@
 on:
   workflow_call:
-
+    inputs:
+      skip:
+        description: 'Whether to skip the job'
+        required: false
+        type: string
+        default: 'false'
 jobs:
   terraform_workflow:
+    if: inputs.skip != 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # pin@v3
