--- a/.github/workflows/pull-request-path.yml
+++ b/.github/workflows/pull-request-path.yml
@@ -10,13 +10,13 @@ defaults:
 on:
   push:
     branches:
-      - 'UML-2560**'
+      - 'UML-2559**'
+#      - 'main'
 #      - '*'              # matches every branch that doesn't contain a '/'
 #      - '*/*'            # matches every branch containing a single '/'
 #      - '**'             # matches every branch
 #      - '!main'          # reverse match main
 #      - '!dependabot/**' # reverse match dependabot PRs
-
 
 # Base permissions are better
 
@@ -35,23 +35,55 @@ permissions:
 jobs:
   workflow_variables:
     runs-on: ubuntu-latest
-    name: Extract branch name
+    name: output workflow variables
     outputs:
-      raw_branch: ${{ steps.extract_branch.outputs.branch_raw }}
       parsed_branch: ${{ steps.extract_branch.outputs.branch_formatted }}
       short_sha:  ${{ steps.sha.outputs.short_sha }}
+      admin_only: ${{ steps.changed-files-admin.outputs.only_changed }}
+      terraform_only: ${{ steps.changed-files-terraform.outputs.only_changed }}
+      specific_path: ${{ steps.changed-path.outputs.path }}
+      one_path_only: ${{ steps.changed-path.outputs.one_path_only }}
     steps:
+      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # pin@v3
       - name: Extract branch
         shell: bash
-        run: |
-          echo "##[set-output name=branch_raw;]$(echo ${GITHUB_HEAD_REF:-${GITHUB_REF##*/}})"
-          echo "##[set-output name=branch_formatted;]$(echo ${GITHUB_HEAD_REF:-${GITHUB_REF##*/}} | tr -cd '[:alnum:]' | tr '[:upper:]' '[:lower:]')"
+        run: echo "##[set-output name=branch_formatted;]$(echo ${GITHUB_HEAD_REF:-${GITHUB_REF##*/}} | tr -cd '[:alnum:]' | tr '[:upper:]' '[:lower:]')"
         id: extract_branch
       - name: Extract short sha
         shell: bash
-        run: |
-          echo "##[set-output name=short_sha;]$(echo ${GITHUB_SHA:0:7})"
+        run: echo "##[set-output name=short_sha;]$(echo ${GITHUB_SHA:0:7})"
         id: sha
+      - name: get changed files in the admin folder
+        id: changed-files-admin
+        uses: tj-actions/changed-files@270645280afddc7e2cf3f4867089522c8f2f8f9a
+        with:
+          files: |
+            service-admin/**
+      - name: get changed files in the terraform folder
+        id: changed-files-terraform
+        uses: tj-actions/changed-files@270645280afddc7e2cf3f4867089522c8f2f8f9a
+        with:
+          files: |
+            terraform/**
+      - name: export specific path only
+        id: changed-path
+        run: |
+          if [[ ${{ steps.changed-files-terraform.outputs.only_changed }} = "true" ]]
+          then
+            echo "##[set-output name=path;]$(echo terraform)"
+            echo "##[set-output name=one_path_only;]$(echo true)"
+          elif [[ ${{ steps.changed-files-admin.outputs.only_changed }} = "true" ]]
+          then
+            echo "##[set-output name=path;]$(echo admin)"
+            echo "##[set-output name=one_path_only;]$(echo true)"
+          else
+            echo "##[set-output name=path;]$(echo all)"
+            echo "##[set-output name=one_path_only;]$(echo false)"
+          fi
+      - name: show selected path
+        run: echo "Path selected - ${PATH_SELECTION}"
+        env:
+          PATH_SELECTION: ${{ steps.changed-path.outputs.path }}
 
   terraform_lint:
     name: lint terraform code
@@ -60,17 +92,24 @@ jobs:
       - workflow_variables
     with:
       workspace: ${{ needs.workflow_variables.outputs.parsed_branch }}
+      skip: ${{ needs.workflow_variables.outputs.admin_only }}
     secrets: inherit
 
   node_test:
-    if: github.actor != 'dependabot[bot]'
     name: test node dependencies
     uses: ./.github/workflows/_node-test.yml
+    needs:
+      - workflow_variables
+    with:
+      skip: ${{ needs.workflow_variables.outputs.one_path_only }}
 
   node_build:
-    if: github.actor != 'dependabot[bot]'
     name: build node dependencies
     uses: ./.github/workflows/_node-build.yml
+    needs:
+      - workflow_variables
+    with:
+      skip: ${{ needs.workflow_variables.outputs.one_path_only }}
 
   docker_build_scan_push:
     name: build, test, scan and push
@@ -79,10 +118,16 @@ jobs:
       - workflow_variables
       - node_test
       - node_build
+    if: |
+      always() &&
+      (needs.node_test.result == 'success' || needs.node_test.result == 'skipped') &&
+      (needs.node_build.result == 'success' || needs.node_build.result == 'skipped') &&
+      needs.workflow_variables.result == 'success'
     with:
       tag: ${{ needs.workflow_variables.outputs.parsed_branch }}-${{ needs.workflow_variables.outputs.short_sha }}
       branch_name: ${{ needs.workflow_variables.outputs.parsed_branch }}
       push_to_ecr: true
+      specific_path: ${{ needs.workflow_variables.outputs.specific_path }}
     secrets: inherit
 
   terraform_plan_shared_development:
@@ -90,9 +135,14 @@ jobs:
     uses: ./.github/workflows/_run-terraform.yml
     needs:
       - terraform_lint
+    if: |
+      always() &&
+      (needs.terraform_lint.result == 'success' || needs.terraform_lint.result == 'skipped')
     with:
       workspace: development
       terraform_path: account
+      skip: ${{ needs.workflow_variables.outputs.admin_only }}
+      specific_path: ${{ needs.workflow_variables.outputs.specific_path }}
     secrets: inherit
 
   terraform_apply_environment:
@@ -102,11 +152,17 @@ jobs:
       - docker_build_scan_push
       - terraform_lint
       - workflow_variables
+    if: |
+      always() &&
+      (needs.terraform_lint.result == 'success' || needs.terraform_lint.result == 'skipped') &&
+      needs.docker_build_scan_push.result == 'success' &&
+      needs.workflow_variables.result == 'success'
     with:
       workspace: ${{ needs.workflow_variables.outputs.parsed_branch }}
       terraform_path: environment
       container_version: ${{ needs.workflow_variables.outputs.parsed_branch }}-${{ needs.workflow_variables.outputs.short_sha }}
       apply: true
+      specific_path: ${{ needs.workflow_variables.outputs.specific_path }}
     secrets: inherit
 
   seed_dynamodb:
@@ -114,6 +170,9 @@ jobs:
     uses: ./.github/workflows/_seed-database.yml
     needs:
       - terraform_apply_environment
+    if: |
+      always() &&
+      needs.terraform_apply_environment.result == 'success'
     secrets: inherit
 
   run_behat_suite:
@@ -122,15 +181,22 @@ jobs:
     needs:
       - seed_dynamodb
       - workflow_variables
+    if: |
+      always() &&
+      needs.workflow_variables.result == 'success' &&
+      needs.seed_dynamodb.result == 'success'
     with:
       workspace: ${{ needs.workflow_variables.outputs.parsed_branch }}
     secrets: inherit
 
-  python_templated_slack_notify:
+  slack_notify:
     name: notify of result
     uses: ./.github/workflows/_slack-notification.yml
     needs:
       - run_behat_suite
+    if: |
+      always() &&
+      needs.run_behat_suite.result == 'success'
     with:
       template: successful_dev_build.txt
     secrets:
@@ -138,7 +204,11 @@ jobs:
 
   code_coverage:
     name: upload to code coverage
-    needs: ['docker_build_scan_push']
+    needs:
+      - docker_build_scan_push
+    if: |
+      always() &&
+      needs.docker_build_scan_push.result == 'success'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # pin@v3
@@ -166,7 +236,11 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - code_coverage
-      - python_templated_slack_notify
+      - slack_notify
+    if: |
+      always() &&
+      needs.code_coverage.result == 'success' &&
+      needs.slack_notify.result == 'success'
     steps:
       - name: ending workflow
         run: echo "Workflow has finished without any issues"
