--- a/.github/workflows/dependabot-composer-npm-path.yml
+++ b/.github/workflows/dependabot-composer-npm-path.yml
@@ -10,12 +10,11 @@ defaults:
 on:
   push:
     branches:
-#      - 'dependabot/npm_and_yarn/**'
-#      - 'dependabot/composer/**'
-      - 'UML-2560**'
+      - 'dependabot/npm_and_yarn/**'
+      - 'dependabot/composer/**'
 
 permissions:
-  contents: write
+  contents: read
   security-events: write
   pull-requests: read
   actions: none
@@ -31,14 +30,14 @@ jobs:
     uses: ministryofjustice/opg-github-workflows/.github/workflows/data-parse-branch-name.yml@2d85e0b1b1b84ca98b6ec27d251d8e6319c95df9 # pin@v1.8.0
 
   node_test:
-    if: github.actor == 'dependabot[bot]'
     name: test node dependencies
     uses: ./.github/workflows/_node-test.yml
+    if: github.actor == 'dependabot[bot]'
 
   node_build:
-    if: github.actor == 'dependabot[bot]'
     name: build node dependencies
     uses: ./.github/workflows/_node-build.yml
+    if: github.actor == 'dependabot[bot]'
 
   docker_build_scan_push:
     name: build, test, scan and push
@@ -48,43 +47,18 @@ jobs:
       - node_test
       - node_build
     with:
-      tag: ${{ needs.branch_name.outputs.parsed }}-${{ github.sha }}
       branch_name: ${{ needs.branch_name.outputs.parsed }}
       push_to_ecr: false
     secrets: inherit
+    if: github.actor == 'dependabot[bot]'
 
-  code_coverage:
-    name: upload to code coverage
-    needs: ['docker_build_scan_push']
+  end_of_workflow:
+    name: end of workflow
     runs-on: ubuntu-latest
+    needs:
+      - docker_build_scan_push
+      - branch_name
     steps:
-      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # pin@v3
-      - name: Restore the tests
-        run: echo "Restoring the tests"
-      - name: Get and Validate Codecov App
-        run: bash ./scripts/pipeline/codecov_uploader/validate_codecov_uploader.sh
-      - name: download artifact for front tests
-        uses: actions/download-artifact@fb598a63ae348fa914e94cd0ff38f362e927b741
-        with:
-          name: service-front
-      - name: download artifact for api tests
-        uses: actions/download-artifact@fb598a63ae348fa914e94cd0ff38f362e927b741
-        with:
-          name: service-api
-      - name: check paths
+      - name: workflow has ended without issue
         run: |
-          ls -alt service-api
-          ls -alt service-front
-      - name: Upload to Codecov
-        run: |
-          echo "would run normally"
-          # bash ~/project/codecov -t ${{ secrets.CODECOV_TOKEN }} || echo 'Codecov upload failed'
-
-  # Required end of workflow job
-#  workflow_end:
-#    name: End of workflow
-#    runs-on: ubuntu-latest
-#    needs: ['code_coverage']
-#    steps:
-#      - name: ending workflow
-#        run: echo "Ending Workflow"
+          echo "${{ needs.branch_name.outputs.parsed }} has been built and tested"
