--- a/.github/workflows/golang-linting.yml
+++ b/.github/workflows/golang-linting.yml
@@ -1,20 +1,16 @@
 name: Golang Linting for Admin App
-#on:
-#  pull_request:
-#    branches: [ main ]
-#    paths:
-#    # only run when service-admin is changed
-#      - 'service-admin/**'
-
 on:
-  workflow_call:
-
+  pull_request:
+    branches: [ main ]
+    paths:
+    # only run when service-admin is changed
+      - 'service-admin/**'
 jobs:
   golangci:
     name: lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # pin@v3
+      - uses: actions/checkout@v2
       - uses: actions/setup-go@v3
         with:
           go-version: '1.16' # The Go version to download (if necessary) and use.
