--- a/service-front/web/.eslintrc.json
+++ b/service-front/web/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": ["plugin:prettier/recommended"]
+  "extends": ["plugin:prettier/recommended"],
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaVersion": 2020
+  }
 }
