--- a/service-front/web/package.json
+++ b/service-front/web/package.json
@@ -14,7 +14,7 @@
     "esbuild": "npm run build-scss && node build.js && babel dist/index.js -o dist/indexES5.js",
     "watch": "webpack --progress --watch --config webpack.development.js",
     "accessibility-check": "node ./pa11y.js",
-    "build-scss": "npm rebuild node-sass && node-sass --omit-source-map-url src/gds.scss dist/stylesheets/gds.css && node-sass --omit-source-map-url src/stylesheets/lpa.scss dist/stylesheets/lpa.css"
+    "build-scss": "npm rebuild sass --verbose && sass --verbose --no-source-map src/gds.scss dist/stylesheets/gds.css && sass --no-source-map src/stylesheets/lpa.scss dist/stylesheets/lpa.css"
   },
   "author": "John Nolan <john.nolan@digital.justice.gov.uk>",
   "license": "MIT",
@@ -37,7 +37,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^27.5.1",
     "jest-junit": "^13.2.0",
-    "node-sass": "^7.0.3",
     "prettier": "^2.7.1",
     "sass": "^1.55.0"
   },
