--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -196,7 +196,7 @@ services:
       DYNAMODB_TABLE_VIEWER_CODES: "ViewerCodes"
       DYNAMODB_TABLE_VIEWER_ACTIVITY: "ViewerActivity"
       DYNAMODB_TABLE_USER_LPA_ACTOR_MAP: "UserLpaActorMap"
-      DYNAMODB_TABLE_STATS: "Stats"
+#      DYNAMODB_TABLE_STATS: "Stats"
 
       SIRIUS_API_ENDPOINT: "http://api-gateway:5000"
       LPA_CODES_API_ENDPOINT: "http://codes-gateway:4343"
@@ -248,7 +248,7 @@ services:
       DYNAMODB_TABLE_VIEWER_CODES: "ViewerCodes"
       DYNAMODB_TABLE_ACTOR_USERS: "ActorUsers"
       DYNAMODB_TABLE_USER_LPA_ACTOR_MAP: "UserLpaActorMap"
-      DYNAMODB_TABLE_STATS: "Stats"
+#      DYNAMODB_TABLE_STATS: "Stats"
       AWS_ENDPOINT_DYNAMODB: dynamodb-local:8000
       CODES_ENDPOINT: codes-gateway:4343
 
