update package and config files

--- a/service-front/web/babel.config.json
+++ b/service-front/web/babel.config.json
@@ -1,24 +1,24 @@
 {
-  "sourceType": "script",
+  "sourceType": "module",
   "presets": [
     [
       "@babel/preset-env",
       {
         "targets": {
-          "ie": 11,
-        },
-      },
-    ],
+          "ie": 11
+        }
+      }
+    ]
   ],
   "plugins": [
     [
       "@babel/plugin-transform-runtime",
       {
-        "regenerator": true,
-      },
+        "regenerator": true
+      }
     ],
     "@babel/plugin-transform-reserved-words",
     "@babel/plugin-transform-member-expression-literals",
-    "@babel/plugin-transform-property-literals",
-  ],
+    "@babel/plugin-transform-property-literals"
+  ]
 }
