--- a/service-front/web/package.json
+++ b/service-front/web/package.json
@@ -8,13 +8,10 @@
   "scripts": {
     "test": "CI=true jest --coverage",
     "test:watch": "jest --watch",
-    "build:pdf": "webpack --progress --config webpack.pdf.development.js",
-    "build:pdf_production": "npm run build-scss && webpack --progress --config webpack.pdf.production.js",
-    "build": "npm run build-scss && webpack --progress --config webpack.production.js",
-    "esbuild": "npm run build-scss && node build.js && babel dist/index.js -o dist/indexES5.js",
+    "build": "npm run build-scss && node build.js && babel dist/index.js -o dist/indexES5.js",
     "watch": "webpack --progress --watch --config webpack.development.js",
     "accessibility-check": "node ./pa11y.js",
-    "build-scss": "npm rebuild sass --verbose && sass --verbose --no-source-map src/gds.scss dist/stylesheets/gds.css && sass --no-source-map src/stylesheets/lpa.scss dist/stylesheets/lpa.css"
+    "build-scss": "npm rebuild sass --verbose && sass --verbose src/gds.scss dist/stylesheets/gds.css && sass src/stylesheets/lpa.scss dist/stylesheets/main.css && sass src/pdf.scss dist/pdf.css"
   },
   "author": "John Nolan <john.nolan@digital.justice.gov.uk>",
   "license": "MIT",
@@ -35,7 +32,7 @@
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^27.5.1",
+    "jest": "^29.2.0",
     "jest-junit": "^13.2.0",
     "prettier": "^2.7.1",
     "sass": "^1.55.0"
@@ -44,6 +41,7 @@
     "@babel/runtime": "^7.18.6",
     "@ministryofjustice/frontend": "0.2.6",
     "govuk-frontend": "^3.14.0",
+    "jest-environment-jsdom": "^29.2.0",
     "perfume.js": "^6.4.0"
   },
   "jest-junit": {
