--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -264,7 +264,7 @@ services:
     environment:
       ENVIRONMENT: local
       REGION: eu-west-1
-      AWS_ACCESS_KEY_ID: 'dummy'
+      AWS_ACCESS_KEY_ID: '-'
       AWS_SECRET_ACCESS_KEY: 'dummy'
     volumes:
       - ./lambda-functions/upload-statistics/app:/function/app
